--- a/resources/style.css
+++ b/resources/style.css
@@ -4,4 +4,12 @@ body {
     align-items: center;
     justify-content: space-evenly;
     text-align: center;
+    max-width: 900px;
+}
+
+@media (min-width: 901px) {
+    body {
+        max-width: 50%;
+        margin: 0 auto;
+    }
 }
