--- a/resources/style.css
+++ b/resources/style.css
@@ -5,12 +5,22 @@ body {
     align-items: center;
     justify-content: space-evenly;
     text-align: center;
-    max-width: 900px;
 }
 
 @media (min-width: 901px) {
     body {
-        max-width: 50%;
+        max-width: 60%;
         margin: 0 auto;
     }
+}
+
+h1 {
+    font-family: 'Clicker Script', serif;
+    font-size: 4rem;
+    margin-top: 5rem;
+}
+
+html {
+    background-color: hsla(148, 53%, 61%, .5);
+    color: maroon;
 }
