--- a/resources/style.css
+++ b/resources/style.css
@@ -30,3 +30,12 @@ img {
     margin: 0;
     padding: 0;
 }
+
+input {
+    padding: .5rem;
+    font-weight: bold;
+}
+
+label {
+    font-size: large;
+}
